🐞 fix z-index + timeout issue

--- a/src/components/StoryCanvas/Story/Story.scss
+++ b/src/components/StoryCanvas/Story/Story.scss
@@ -30,6 +30,7 @@
 }
 
 .end-screen {
+    z-index: 4;
     p {
         font-size: 20px;
         margin: 20px 0;
